--- a/CardCalio.html
+++ b/CardCalio.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="p-5 pt-8">
-          <div class="bg-black bg-opacity-10 rounded-full px-3 text-xl">
+          <div class="bg-black bg-opacity-10 rounded-full px-3 text-xl text-white">
               PRO
           </div>
         </div>
